--- a/build.gradle
+++ b/build.gradle
@@ -60,14 +60,13 @@ configurations {
 dependencies {
     implementation fileTree(dir: ghidraInstallDir + '/Ghidra/Processors', include: "**/*.jar")
     localDeps group: 'org.lz4', name: 'lz4-java', version: '1.5.1'
-    implementation configurations.localDeps
 }
 
 buildExtension {
-    baseName "${project.name}-${project.version}-${getGitHash()}-Ghidra_${ghidra_version}".replace(' ', '_')
-    extension 'zip'
-    destinationDir DISTRIBUTION_DIR
-    version ''
+    archiveBaseName = "${project.name}-${project.version}-${getGitHash()}-Ghidra_${ghidra_version}".replace(' ', '_')
+    archiveExtension = 'zip'
+    archiveVersion = ''
+    destinationDirectory = DISTRIBUTION_DIR
     
     // Make sure that we don't try to copy the same file with the same path into the
     // zip (this can happen!)
@@ -115,6 +114,6 @@ buildExtension {
     }
 
     doLast {
-        println "\nCreated " + baseName + "." + extension + " in " + destinationDir
+        println "\nCreated " + archiveBaseName + "." + archiveExtension + " in " + destinationDirectory
     }
 }
