--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,12 @@ on:
 jobs:
   gradle:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        ghidra:
+        - "11.2"
+        - "11.2.1"
+    
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-java@v4
@@ -15,8 +21,8 @@ jobs:
     - uses: antoniovazquezblanco/setup-ghidra@v2.0.5
       with:
         auth_token: ${{ secrets.GITHUB_TOKEN }}
-        version: 11.2.1
-    - name: Execute Gradle build
+        version: ${{ matrix.ghidra }}
+    - name: Build targetting Ghidra ${{ matrix.ghidra }}
       run: ./gradlew -PGHIDRA_INSTALL_DIR=${{ env.GHIDRA_INSTALL_DIR }}
     - name: Release
       uses: softprops/action-gh-release@v1
